# LLM-Project

./: .gitignore  .gitmodules  README.md  assignment.md  chat.py  coverage.xml  endpoint.py  hello.py  pyproject.toml  requirements.txt
.github/workflows/: integration-tests.yaml  tests.yaml
test_files/: Jaimie.txt  hello2.txt
tools/: calculate.py  cat.py  doctests.py  grep.py  ls.py  rm.py  utils.py  write_file.py  write_files.py
