[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cmc-csci040-andrewvankomen"
version = "0.1.9"
dependencies = [
    "groq",
    "python-dotenv",
    "gitpython",
    "openai",
]
readme = "README.md"

[project.scripts]
chat = "chat:main"

[tool.setuptools]
py-modules = ["chat"]
packages = ["tools"]